<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText android:id="@+id/name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginBottom="16sp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/notify_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/notify_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textAllCaps="true"
            android:text="@string/quantity" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="16sp"
                android:onClick="decrement"
                android:text="@string/minus_sign"
                android:layout_marginBottom="16sp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:layout_marginBottom="16sp"
                android:textColor="@android:color/black"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity_filler"
                android:layout_weight="1" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="16sp"
                android:onClick="increment"
                android:text="@string/plus_sign"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textAllCaps="true"
            android:text="@string/price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_text_view"
            android:layout_marginBottom="16sp"
            android:textColor="@android:color/black"
            android:text="@string/price_filler" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>
